# kk-snippets

./: Makefile  README.ja.md  README.md  ec-to-kk.py  pyproject.toml  requirements.txt  streamlit_app.py
pages/: chara-data-viewer.py  convert-to-aicomi.py  digital-craft-calligrapher.py  digital-craft-character-converter.py  digital-craft-data-viewer.py  digital-craft-exchange-items.py  digital-craft-item-converter.py  digital-craft-svg-importer.py  ec-to-kk.py  hc-viewer.py  home.py  illgames-chara-converter.py  sv-chara-trait-editor.py  sv-hc-converter.py  sv-saveeditor.py  sv-stat.py  sv-viewer.py
pages/digital-craft-calligrapher-data/: 青春6フォント-LICENSE.txt
pages/digital-craft-data-viewer-data/: items.parquet  motions.parquet
